# PeasantEvaluation

./: .gitignore  CMakeLists.txt  config.h  main.c  weather.c  weather.h
Parson/: parson.c
